--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search-bar {
@@ -8,7 +10,7 @@
 }
 
 .search-bar input {
-  width: 75%;
+  width: 250px;
 }
 
 .video-item img {
@@ -20,6 +22,10 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
+}
+
+.list-group {
+  margin-top: 10px;
 }
 
 .list-group-item {
